--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -74,7 +74,7 @@ dotnet/embed_build_outputs=false
 name="Android"
 platform="Android"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="exclude"
@@ -110,7 +110,7 @@ version/code=1
 version/name=""
 package/unique_name="com.example.$genname"
 package/name=""
-package/signed=false
+package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=false
 package/exclude_from_recents=false
